@@ -25,13 +25,46 @@ public class PrecipitationPerMonthMapReduceTest {
 
     @Test
     public void shouldProduceCorrectTotalsForDataFromOneMonth() throws Exception {
-        output = driver.withInput(key(0), dataLine(425, "20100101", 1))
+        output = driver.withInput(key(0), dataLine(240, "20100101", 1))
+                       .withInput(key(1), dataLine(260, "20100101", 3))
+                       .withInput(key(2), dataLine(240, "20100102", 1))
+                       .withInput(key(3), dataLine(260, "20100102", 6))
                        .run();
 
-        assertThat(output.size(), is(1));
+        assertThat(output.size(), is(2));
 
-        assertThat(output.get(0).getFirst(), equalTo(new Text("20100101")));
-        assertThat(output.get(0).getSecond(), equalTo(new LongWritable(1)));
+        assertThat(output.get(0).getFirst(), equalTo(new Text("240,201001")));
+        assertThat(output.get(0).getSecond(), equalTo(new LongWritable(2)));
+
+        assertThat(output.get(1).getFirst(), equalTo(new Text("260,201001")));
+        assertThat(output.get(1).getSecond(), equalTo(new LongWritable(9)));
+    }
+
+    @Test
+    public void shouldProduceCorrectTotalsForDataFromMultipleMonths() throws Exception {
+        output = driver.withInput(key(0), dataLine(240, "20100101", 1))
+                       .withInput(key(1), dataLine(260, "20100101", 3))
+                       .withInput(key(2), dataLine(240, "20100102", 1))
+                       .withInput(key(3), dataLine(260, "20100102", 6))
+                       .withInput(key(4), dataLine(240, "20100201", 8))
+                       .withInput(key(5), dataLine(260, "20100201", 7))
+                       .withInput(key(6), dataLine(240, "20100202", 6))
+                       .withInput(key(7), dataLine(260, "20100202", 5))
+                       .run();
+
+        assertThat(output.size(), is(4));
+
+        assertThat(output.get(0).getFirst(), equalTo(new Text("240,201001")));
+        assertThat(output.get(0).getSecond(), equalTo(new LongWritable(2)));
+
+        assertThat(output.get(1).getFirst(), equalTo(new Text("240,201002")));
+        assertThat(output.get(1).getSecond(), equalTo(new LongWritable(14)));
+
+        assertThat(output.get(2).getFirst(), equalTo(new Text("260,201001")));
+        assertThat(output.get(2).getSecond(), equalTo(new LongWritable(9)));
+
+        assertThat(output.get(3).getFirst(), equalTo(new Text("260,201002")));
+        assertThat(output.get(3).getSecond(), equalTo(new LongWritable(12)));
     }
 
     // ============================================================================
